@@ -4,6 +4,7 @@ V.NEXT
 - [MINOR] MsalTestApp uses 1.4.0 for com.microsoft.identity.client:opentelemetry.exporter (#1878)
 - [PATCH] Accommodating broker validator refactoring (#1851)
 - [MINOR] Update YubiKit version to 2.3.0 (#1854)
+- [MINOR] MSA UI tests for Brokered Auth (#1856)
 
 Version 4.6.3
 ----------
